# student-management-platform

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: database_management.py  etudiants.json  notes.json  platform.db
functions/: analyse_notes.py  data_processing.py  gestion_etudiants.py  gestion_notes.py  grade_analysis.py  helpers.py
