[project]
name = "student-management-platform"
version = "0.1.0"
description = "A simple student management platform built using Streamlit and Pandas."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.2.3",
    "streamlit>=1.45.1",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
